--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74a4c0">  <td>23/06/19 15:00:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TitleTest.verifyTitle()[pri:0, instance:com.automation.testng.TitleTest@644baf4a]">verifyTitle</td> 
-  <td>main@1848125895</td>   <td></td> </tr>
+<tr bgcolor="74a4c0">  <td>23/06/19 15:21:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TitleTest.verifyGoogleTitle()[pri:0, instance:com.automation.testng.TitleTest@1ed4ae0f]">verifyGoogleTitle</td> 
+  <td>main@2123960023</td>   <td></td> </tr>
+<tr bgcolor="74a4c0">  <td>23/06/19 15:21:22</td>   <td>-5530</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TitleTest.verifyFacebokTitle()[pri:0, instance:com.automation.testng.TitleTest@1ed4ae0f]">verifyFacebokTitle</td> 
+  <td>main@2123960023</td>   <td></td> </tr>
+<tr bgcolor="74a4c0">  <td>23/06/19 15:21:09</td>   <td>-18360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TitleTest.verifyAlphabet()[pri:0, instance:com.automation.testng.TitleTest@1ed4ae0f]">verifyAlphabet</td> 
+  <td>main@2123960023</td>   <td></td> </tr>
 </table>
